# P1

./: CMakeLists.txt  PLPR.c  Parameters.c  README.md  Scan_Data_TXT.c  Scan_Data_TXT.h  Scan_Data_TestCase.c  Scan_Data_TestCase.h  Sources.md  US_Election_2016.txt  Winner_of_election.c  Wyoming_Rule.c  abolish_states.c  available_files.c  connecter.h  electoral_college.c  main.c  monte_carlo.c  printUSA.c  scan_candidates.c  scan_data.c  scan_electors.c  weight_of.c  winner_of_election.c
Candidates/: Candidates_1000.txt  Candidates_2000.txt  Candidates_2004.txt  Candidates_2008.txt  Candidates_2012.txt  Candidates_2016.txt  Candidates_2020.txt  Candidates_2024.txt  Example_Candidates.txt  scan_candidates.c
Features/: Compare_table.c  Wyoming_Rule.c  abolish_states.c  copy_systems_names.c  format_number.c  monte_carlo.c  printUSA.c  weight_of_votes.c
US_election_data/: US_Election_1.txt  US_Election_1000.txt  US_Election_2000.txt  US_Election_2008.txt  US_Election_2012.txt  US_Election_2016.txt  US_Election_2020.txt  US_Election_2024.txt  scan_data.c
election_systems/: BC.c  CMakeLists.txt  Compare.c  Compare_table.c  Custom.c  PLPR.c  STV.c  electoral_college.c
test_of_program/: BC_TestCase.c  CMakeLists.txt  PLPR_TestCase.c  STV_TestCase.c  Scan_Data_TestCase.c  run_test.c  scan_data_TestCase.c
